simulator/src/jack/generated/JackParser.ts
// Generated from JackParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { JackParserListener } from "./JackParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


import { SubroutineScope, LocalSymbolTable } from "../symbol.js";


export class JackParser extends antlr.Parser {
    public static readonly CLASS = 1;
    public static readonly CONSTRUCTOR = 2;
    public static readonly FUNCTION = 3;
    public static readonly METHOD = 4;
    public static readonly FIELD = 5;
    public static readonly STATIC = 6;
    public static readonly VAR = 7;
    public static readonly INT = 8;
    public static readonly CHAR = 9;
    public static readonly BOOLEAN = 10;
    public static readonly VOID = 11;
    public static readonly LET = 12;
    public static readonly DO = 13;
    public static readonly IF = 14;
    public static readonly ELSE = 15;
    public static readonly WHILE = 16;
    public static readonly RETURN = 17;
    public static readonly LBRACE = 18;
    public static readonly RBRACE = 19;
    public static readonly LPAREN = 20;
    public static readonly RPAREN = 21;
    public static readonly LBRACKET = 22;
    public static readonly RBRACKET = 23;
    public static readonly DOT = 24;
    public static readonly COMMA = 25;
    public static readonly SEMICOLON = 26;
    public static readonly EQUALS = 27;
    public static readonly PLUS = 28;
    public static readonly MINUS = 29;
    public static readonly MUL = 30;
    public static readonly DIV = 31;
    public static readonly AND = 32;
    public static readonly OR = 33;
    public static readonly TILDE = 34;
    public static readonly LESS_THAN = 35;
    public static readonly GREATER_THAN = 36;
    public static readonly WHITESPACE = 37;
    public static readonly BLOCK_COMMENT = 38;
    public static readonly LINE_COMMENT = 39;
    public static readonly INTEGER_LITERAL = 40;
    public static readonly TRUE = 41;
    public static readonly FALSE = 42;
    public static readonly NULL_LITERAL = 43;
    public static readonly THIS_LITERAL = 44;
    public static readonly IDENTIFIER = 45;
    public static readonly STRING_LITERAL = 46;
    public static readonly RULE_program = 0;
    public static readonly RULE_classDeclaration = 1;
    public static readonly RULE_className = 2;
    public static readonly RULE_classVarDec = 3;
    public static readonly RULE_fieldList = 4;
    public static readonly RULE_fieldName = 5;
    public static readonly RULE_subroutineDeclaration = 6;
    public static readonly RULE_subroutineType = 7;
    public static readonly RULE_subroutineDecWithoutType = 8;
    public static readonly RULE_subroutineName = 9;
    public static readonly RULE_subroutineReturnType = 10;
    public static readonly RULE_varType = 11;
    public static readonly RULE_parameterList = 12;
    public static readonly RULE_parameter = 13;
    public static readonly RULE_parameterName = 14;
    public static readonly RULE_subroutineBody = 15;
    public static readonly RULE_rBrace = 16;
    public static readonly RULE_varDeclaration = 17;
    public static readonly RULE_varNameInDeclaration = 18;
    public static readonly RULE_statements = 19;
    public static readonly RULE_statement = 20;
    public static readonly RULE_letStatement = 21;
    public static readonly RULE_equals = 22;
    public static readonly RULE_ifElseStatement = 23;
    public static readonly RULE_ifStatement = 24;
    public static readonly RULE_ifExpression = 25;
    public static readonly RULE_elseStatement = 26;
    public static readonly RULE_whileStatement = 27;
    public static readonly RULE_whileExpression = 28;
    public static readonly RULE_doStatement = 29;
    public static readonly RULE_subroutineCall = 30;
    public static readonly RULE_subroutineId = 31;
    public static readonly RULE_returnStatement = 32;
    public static readonly RULE_expressionList = 33;
    public static readonly RULE_expression = 34;
    public static readonly RULE_constant = 35;
    public static readonly RULE_varName = 36;
    public static readonly RULE_arrayAccess = 37;
    public static readonly RULE_unaryOperation = 38;
    public static readonly RULE_groupedExpression = 39;
    public static readonly RULE_booleanLiteral = 40;
    public static readonly RULE_unaryOperator = 41;
    public static readonly RULE_binaryOperator = 42;

    public static readonly literalNames = [
        null, "'class'", "'constructor'", "'function'", "'method'", "'field'", 
        "'static'", "'var'", "'int'", "'char'", "'boolean'", "'void'", "'let'", 
        "'do'", "'if'", "'else'", "'while'", "'return'", "'{'", "'}'", "'('", 
        "')'", "'['", "']'", "'.'", "','", "';'", "'='", "'+'", "'-'", "'*'", 
        "'/'", "'&'", "'|'", "'~'", "'<'", "'>'", null, null, null, null, 
        "'true'", "'false'", "'null'", "'this'"
    ];

    public static readonly symbolicNames = [
        null, "CLASS", "CONSTRUCTOR", "FUNCTION", "METHOD", "FIELD", "STATIC", 
        "VAR", "INT", "CHAR", "BOOLEAN", "VOID", "LET", "DO", "IF", "ELSE", 
        "WHILE", "RETURN", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", 
        "RBRACKET", "DOT", "COMMA", "SEMICOLON", "EQUALS", "PLUS", "MINUS", 
        "MUL", "DIV", "AND", "OR", "TILDE", "LESS_THAN", "GREATER_THAN", 
        "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT", "INTEGER_LITERAL", 
        "TRUE", "FALSE", "NULL_LITERAL", "THIS_LITERAL", "IDENTIFIER", "STRING_LITERAL"
    ];
    public static readonly ruleNames = [
        "program", "classDeclaration", "className", "classVarDec", "fieldList", 
        "fieldName", "subroutineDeclaration", "subroutineType", "subroutineDecWithoutType", 
        "subroutineName", "subroutineReturnType", "varType", "parameterList", 
        "parameter", "parameterName", "subroutineBody", "rBrace", "varDeclaration", 
        "varNameInDeclaration", "statements", "statement", "letStatement", 
        "equals", "ifElseStatement", "ifStatement", "ifExpression", "elseStatement", 
        "whileStatement", "whileExpression", "doStatement", "subroutineCall", 
        "subroutineId", "returnStatement", "expressionList", "expression", 
        "constant", "varName", "arrayAccess", "unaryOperation", "groupedExpression", 
        "booleanLiteral", "unaryOperator", "binaryOperator",
    ];

    public get grammarFileName(): string { return "JackParser.g4"; }
    public get literalNames(): (string | null)[] { return JackParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return JackParser.symbolicNames; }
    public get ruleNames(): string[] { return JackParser.ruleNames; }
    public get serializedATN(): number[] { return JackParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, JackParser._ATN, JackParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, JackParser.RULE_program);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 86;
            this.classDeclaration();
            this.state = 87;
            this.match(JackParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public classDeclaration(): ClassDeclarationContext {
        let localContext = new ClassDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 2, JackParser.RULE_classDeclaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 89;
            this.match(JackParser.CLASS);
            this.state = 90;
            this.className();
            this.state = 91;
            this.match(JackParser.LBRACE);
            this.state = 95;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5 || _la === 6) {
                {
                {
                this.state = 92;
                this.classVarDec();
                }
                }
                this.state = 97;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 101;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 28) !== 0)) {
                {
                {
                this.state = 98;
                this.subroutineDeclaration();
                }
                }
                this.state = 103;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 104;
            this.rBrace();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public className(): ClassNameContext {
        let localContext = new ClassNameContext(this.context, this.state);
        this.enterRule(localContext, 4, JackParser.RULE_className);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 106;
            this.match(JackParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public classVarDec(): ClassVarDecContext {
        let localContext = new ClassVarDecContext(this.context, this.state);
        this.enterRule(localContext, 6, JackParser.RULE_classVarDec);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 108;
            _la = this.tokenStream.LA(1);
            if(!(_la === 5 || _la === 6)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 109;
            this.fieldList();
            this.state = 110;
            this.match(JackParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fieldList(): FieldListContext {
        let localContext = new FieldListContext(this.context, this.state);
        this.enterRule(localContext, 8, JackParser.RULE_fieldList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 112;
            this.varType();
            this.state = 113;
            this.fieldName();
            this.state = 118;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 25) {
                {
                {
                this.state = 114;
                this.match(JackParser.COMMA);
                this.state = 115;
                this.fieldName();
                }
                }
                this.state = 120;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fieldName(): FieldNameContext {
        let localContext = new FieldNameContext(this.context, this.state);
        this.enterRule(localContext, 10, JackParser.RULE_fieldName);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 121;
            this.match(JackParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subroutineDeclaration(): SubroutineDeclarationContext {
        let localContext = new SubroutineDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 12, JackParser.RULE_subroutineDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 123;
            this.subroutineType();
            this.state = 124;
            this.subroutineDecWithoutType();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subroutineType(): SubroutineTypeContext {
        let localContext = new SubroutineTypeContext(this.context, this.state);
        this.enterRule(localContext, 14, JackParser.RULE_subroutineType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 126;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 28) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subroutineDecWithoutType(): SubroutineDecWithoutTypeContext {
        let localContext = new SubroutineDecWithoutTypeContext(this.context, this.state);
        this.enterRule(localContext, 16, JackParser.RULE_subroutineDecWithoutType);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 128;
            this.subroutineReturnType();
            this.state = 129;
            this.subroutineName();
            this.state = 130;
            this.match(JackParser.LPAREN);
            this.state = 131;
            this.parameterList();
            this.state = 132;
            this.match(JackParser.RPAREN);
            this.state = 133;
            this.subroutineBody();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subroutineName(): SubroutineNameContext {
        let localContext = new SubroutineNameContext(this.context, this.state);
        this.enterRule(localContext, 18, JackParser.RULE_subroutineName);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 135;
            this.match(JackParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subroutineReturnType(): SubroutineReturnTypeContext {
        let localContext = new SubroutineReturnTypeContext(this.context, this.state);
        this.enterRule(localContext, 20, JackParser.RULE_subroutineReturnType);
        try {
            this.state = 139;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case JackParser.INT:
            case JackParser.CHAR:
            case JackParser.BOOLEAN:
            case JackParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 137;
                this.varType();
                }
                break;
            case JackParser.VOID:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 138;
                this.match(JackParser.VOID);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public varType(): VarTypeContext {
        let localContext = new VarTypeContext(this.context, this.state);
        this.enterRule(localContext, 22, JackParser.RULE_varType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 141;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1792) !== 0) || _la === 45)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameterList(): ParameterListContext {
        let localContext = new ParameterListContext(this.context, this.state);
        this.enterRule(localContext, 24, JackParser.RULE_parameterList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 151;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1792) !== 0) || _la === 45) {
                {
                this.state = 143;
                this.parameter();
                this.state = 148;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 25) {
                    {
                    {
                    this.state = 144;
                    this.match(JackParser.COMMA);
                    this.state = 145;
                    this.parameter();
                    }
                    }
                    this.state = 150;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameter(): ParameterContext {
        let localContext = new ParameterContext(this.context, this.state);
        this.enterRule(localContext, 26, JackParser.RULE_parameter);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            this.varType();
            this.state = 154;
            this.parameterName();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameterName(): ParameterNameContext {
        let localContext = new ParameterNameContext(this.context, this.state);
        this.enterRule(localContext, 28, JackParser.RULE_parameterName);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 156;
            this.match(JackParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subroutineBody(): SubroutineBodyContext {
        let localContext = new SubroutineBodyContext(this.context, this.state);
        this.enterRule(localContext, 30, JackParser.RULE_subroutineBody);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 158;
            this.match(JackParser.LBRACE);
            this.state = 162;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 7) {
                {
                {
                this.state = 159;
                this.varDeclaration();
                }
                }
                this.state = 164;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 165;
            this.statements();
            this.state = 166;
            this.rBrace();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public rBrace(): RBraceContext {
        let localContext = new RBraceContext(this.context, this.state);
        this.enterRule(localContext, 32, JackParser.RULE_rBrace);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 168;
            this.match(JackParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public varDeclaration(): VarDeclarationContext {
        let localContext = new VarDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 34, JackParser.RULE_varDeclaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 170;
            this.match(JackParser.VAR);
            this.state = 171;
            this.varType();
            this.state = 172;
            this.varNameInDeclaration();
            this.state = 177;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 25) {
                {
                {
                this.state = 173;
                this.match(JackParser.COMMA);
                this.state = 174;
                this.varNameInDeclaration();
                }
                }
                this.state = 179;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 180;
            this.match(JackParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public varNameInDeclaration(): VarNameInDeclarationContext {
        let localContext = new VarNameInDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 36, JackParser.RULE_varNameInDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 182;
            this.match(JackParser.IDENTIFIER);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statements(): StatementsContext {
        let localContext = new StatementsContext(this.context, this.state);
        this.enterRule(localContext, 38, JackParser.RULE_statements);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 187;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 225280) !== 0)) {
                {
                {
                this.state = 184;
                this.statement();
                }
                }
                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 40, JackParser.RULE_statement);
        try {
            this.state = 195;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case JackParser.LET:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 190;
                this.letStatement();
                }
                break;
            case JackParser.IF:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 191;
                this.ifElseStatement();
                }
                break;
            case JackParser.WHILE:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 192;
                this.whileStatement();
                }
                break;
            case JackParser.DO:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 193;
                this.doStatement();
                }
                break;
            case JackParser.RETURN:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 194;
                this.returnStatement();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letStatement(): LetStatementContext {
        let localContext = new LetStatementContext(this.context, this.state);
        this.enterRule(localContext, 42, JackParser.RULE_letStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 197;
            this.match(JackParser.LET);
            this.state = 200;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 10, this.context) ) {
            case 1:
                {
                this.state = 198;
                this.varName();
                }
                break;
            case 2:
                {
                this.state = 199;
                this.arrayAccess();
                }
                break;
            }
            this.state = 202;
            this.equals();
            this.state = 203;
            this.expression(0);
            this.state = 204;
            this.match(JackParser.SEMICOLON);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public equals(): EqualsContext {
        let localContext = new EqualsContext(this.context, this.state);
        this.enterRule(localContext, 44, JackParser.RULE_equals);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 206;
            this.match(JackParser.EQUALS);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifElseStatement(): IfElseStatementContext {
        let localContext = new IfElseStatementContext(this.context, this.state);
        this.enterRule(localContext, 46, JackParser.RULE_ifElseStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 208;
            this.ifStatement();
            this.state = 210;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 15) {
                {
                this.state = 209;
                this.elseStatement();
                }
            }
